--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,15 @@
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.4.7.v20170914</version>
+                <configuration>
+                    <webApp>
+                        <contextPath>/web/</contextPath>
+                        <descriptor>${project.basedir}/src/main/webapp/WEB_INF/web.xml</descriptor>
+                    </webApp>
+                    <httpConnector>
+                        <port>8080</port>
+                    </httpConnector>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
