--- a/data/pom.xml
+++ b/data/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>umall</artifactId>
-        <groupId>com.quhaodian</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>com.quhaodian.umall</groupId>
+        <artifactId>umall-root</artifactId>
+        <version>1.01</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.quhaodian.umall</groupId>
     <artifactId>data</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.01</version>
     <packaging>jar</packaging>
 
     <name>data</name>
@@ -17,8 +17,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring.version>4.3.8.RELEASE</spring.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -35,35 +35,12 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.quhaodian</groupId>
-            <artifactId>user_hibernate</artifactId>
-            <version>1.5.2</version>
+            <groupId>com.quhaodian.discover</groupId>
+            <artifactId>discover-website</artifactId>
+            <version>1.8.11</version>
         </dependency>
-        <dependency>
-            <groupId>com.quhaodian</groupId>
-            <artifactId>site_hibernate</artifactId>
-            <version>1.1.9</version>
-        </dependency>
-        <dependency>
-            <groupId>com.quhaodian</groupId>
-            <artifactId>area</artifactId>
-            <version>1.1.9</version>
-        </dependency>
-        <dependency>
-            <groupId>com.quhaodian</groupId>
-            <artifactId>website</artifactId>
-            <version>1.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.quhaodian</groupId>
-            <artifactId>article</artifactId>
-            <version>1.1.9</version>
-        </dependency>
-        <dependency>
-            <groupId>com.quhaodian</groupId>
-            <artifactId>activiti</artifactId>
-            <version>1.2.2</version>
-        </dependency>
+
+
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-jaxb-annotations</artifactId>
@@ -83,6 +60,47 @@
             <groupId>org.apache.oltu.oauth2</groupId>
             <artifactId>org.apache.oltu.oauth2.resourceserver</artifactId>
             <version>1.0.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
         </dependency>
     </dependencies>
 </project>
